[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/game_dungeons/scripts/room.gd" type="Script" id=1]
[ext_resource path="res://scenes/common/tilemaps/static_tiles.tres" type="TileSet" id=2]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="tile_edge" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
collision_mask = 2
format = 1

[node name="tile_floor" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
collision_layer = 0
collision_mask = 0
format = 1

[node name="tile_walls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
collision_mask = 2
format = 1
